js/js.translator/testData/incremental/invalidation/enumEntryChange/lib1/l1.0.kt
enum class Mode {
    A,
    B
}
